set version and upgrade add setting stage